# hrt_pipeline

./: .gitignore  LICENSE  README.md  __init__.py  create_input_json.py  download_files.py  download_from_db.py  environment.yml  example_input_json.py  file_names.txt  hrt_pipe.py  hrt_pipe_sub.py  hrt_pipeline_notebook.ipynb  input_example.json  json_input.py  requirements.txt  run.py  setup.cfg  setup.py  setup.sh  utils.py
.ipynb_checkpoints/: hrt_pipeline_notebook-checkpoint.ipynb
P-MILOS/: .gitignore  makefile  milos.x
cal_data_selector/: cal_selector.py  look_up_table.csv
cmilos/: defines.h  milos  milos.CEwrongIc.c  milos.c  readme.md
cmilos-fits/: ._.gitattributes  ._calculosCompartidos.c  ._convolution.c  ._create_cuantic.c  ._defines.h  ._defines.h.orig  ._errh.h  ._fftw.c  ._fgauss.c  ._fvoigt.c  ._lib.c  ._makefile  ._me_der.c  ._mil_sinrf.c  ._milos  ._milos.c  ._milos.c.old  ._milos.c.orig  ._nrutil.c  ._nrutil.h  ._readme.txt  ._script_milos.sh  ._svdcmp.c  ._svdcmp.h  ._svdcordic.c  ._testp.per  defines.h  fits.c  makefile  milos  milos.c  milos.c.orig
download/: download_from_db.py
input_jsons/: april_2020.txt  april_2020_L1.txt  feb_2021_L1_DC.json  feb_2021_L1_DC_fits.json  feb_2k_2021_L1.txt  north_limb.txt  nov_2020_L1.txt  nov_2020_L1_feb_flats.txt  nov_2020_L1_kll.txt  nov_2021_L1_ip5flat_DC.json  sep11_500_2021.txt  sep11_500_2021_flatc.txt  sep_2021_L1_DC.json  sep_2021_L1_center_DC.json  sep_2021_L1_dc.txt  sep_2021_L1_north.json  sep_2021_L1_north_DC.json  sep_2021_L1_north_all.json  sep_2021_L1_north_noflat.json  sep_2021_L1_sl.txt  (+8 more)
(+81 files in other folders)
