[metadata]
name = sophi_hrt_pipe
provides = sophi_hrt_pipe
description = 'On ground data reduction and calibration pipeline for the Solar Orbiter PHI-HRT instrument'
long_description = file: README.md
long_description_content_type = text/markdown
author = Jonas Sinjan
author_email = einsteinisbae@gmail.com
license = MIT
license_file = LICENSE
url = https://github.com/JonasSinjan/hrt_pipeline
edit_on_github = True
version = 1.3.0
github_project = JonasSinjan/hrt_pipeline
platform = linux
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  License :: MIT
  Natural Language :: English
  Operating System :: linix
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.6
packages = 
  sophi_hrt_pipe
package_dir = 
  =src
install_requires =
  astropy>=4.0.1
  numpy>=1.19.0
  python-dotenv>=0.14.0
  requests>=2.24
  scipy>=1.5.2
  matplotlib>=3.3.0





